    * 4077 FIX: Fixed "Request URI too long" when cloning role after editing another one
    * 4079 FIX: Improved error handling in case a WATO folder can not be written
    * 4082 FIX: Icon selector: Fixed exception in case non images are saved in icon folder
    * 4084 FIX: Improved error handling in case of broken hosts.mk files

    Notifications:
    * 4042 FIX: Fix missing From address in synchronous SMTP notifications...

    BI:
    * 3991 FIX: BI Aggregations: no longer show duplicate aggregations when an aggregation has mulitple groups

    Event Console:
    * 4097 FIX: Event console: Make writing of status file more robust...

    Livestatus:
    * 3651 FIX: Fixed potential segfault with Nagios core when accessing log/commands table via Livestatus....

    HW/SW-Inventory:
    * 3916 FIX: History view: Only showing removed/added entries tables when there are entries
    * 4066 FIX: Fixed broken titles of nodes in inventory views
    * 4067 FIX: Fixed broken inventory history view in current master...
    * 3917 FIX: Fixed broken dicttable rendering
    * 3918 FIX: Inventory history: Fixed possible exception when renedering history tables...
    * 4073 FIX: Cleaned up cluster host handling in HW/SW inventory...


1.4.0i2:
    Core & Setup:
    * 4036 Measurement of time used by Check_MK now includes time waited for agent...
    * 3648 FIX: Fixed log file parsing of host states...
    * 3965 FIX: Nagios: Improved handling of broken core config...

    Checks & Agents:
    * 3841 cups_queues: thresholds are now configurable in WATO...
    * 3910 oracle_instance: noarchivelog can now be ignored
    * 3911 if.include: each operational state can now be mapped to a check state
    * 3912 elphase.include: now device states can be mapped to monitoring states
    * 3913 gude_powerbanks, gude_relayport, gude_temp, gude_humidity: new checks for Gude Power Control devices
    * 3954 postfix_mailq_status: new check which monitors the status of postfix mail instances